Added Javascript pagination for each category

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -8,7 +8,7 @@
  
     <meta charset="utf-8">  
     
-    <title>Sweet Cake HTML</title> <!--insert your title here-->  
+    <title>Peace, Love, & Cakes</title> <!--insert your title here-->  
     <meta name="description" content="Peace Love and Cakes"> <!--insert your description here-->  
     <meta name="author" content="nicDark"> <!--insert your name here-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!--meta responsive-->
@@ -53,7 +53,7 @@
         <div class="grid_5">
             <nav class="rightnavigation">
         		<ul>
-                	<li><a href="#sectionteam">Our Team</a></li> <!--you can edit-->
+                	<li><a href="#sectionteam">Flavors</a></li> <!--you can edit-->
                     <li><a href="#oursocial">Social</a></li> <!--you can edit-->
                     <li><a href="#contacts">Contact Us</a></li> <!--you can edit-->
                 </ul>    
@@ -77,46 +77,6 @@
                 <!-- THE FIRST SLIDE -->
                 <li data-transition="random" data-slotamount="10" data-masterspeed="300" data-delay="6100">     
                     <img alt="" src="assets/section-slide/1/slide1.jpg" >
-        
-                    <div class="caption randomrotate"
-                         data-x="353"
-                         data-y="168"
-                         data-speed="300"
-                         data-start="1500"
-                         data-easing="easeOutExpo" data-end="3800" data-endspeed="300" data-endeasing="easeInSine"><img src="assets/section-slide/1/welcome-1.png" alt="">
-                    </div>
-    
-                    <div class="caption randomrotate"
-                         data-x="178"
-                         data-y="275"
-                         data-speed="300"
-                         data-start="1700"
-                         data-easing="easeOutExpo" data-end="4000" data-endspeed="300" data-endeasing="easeInSine"><img src="assets/section-slide/1/to-2.png" alt="">
-                    </div>
-                    
-                     <div class="caption randomrotate"
-                         data-x="267"
-                         data-y="275"
-                         data-speed="300"
-                         data-start="1900"
-                         data-easing="easeOutExpo" data-end="4200" data-endspeed="300" data-endeasing="easeInSine"><img src="assets/section-slide/1/sweet-3.png" alt="">
-                    </div>
-                    
-                     <div class="caption randomrotate"
-                         data-x="449"
-                         data-y="275"
-                         data-speed="300"
-                         data-start="2100"
-                         data-easing="easeOutExpo" data-end="4400" data-endspeed="300" data-endeasing="easeInSine"><img src="assets/section-slide/1/cake-4.png" alt="">
-                    </div>
-                    
-                     <div class="caption randomrotate"
-                         data-x="603"
-                         data-y="275"
-                         data-speed="300"
-                         data-start="2300"
-                         data-easing="easeOutExpo" data-end="4600" data-endspeed="300" data-endeasing="easeInSine"><img src="assets/section-slide/1/theme-5.png" alt="">
-                    </div>
                 </li>
                 <!--END FIRST SLDIE-->
         
@@ -124,55 +84,6 @@
                 <!--THE SECOND SLIDE -->
                 <li data-transition="random" data-slotamount="15" data-masterspeed="300" data-delay="7800">       
                     <img alt="" src="assets/section-slide/2/slide2.jpg" >
-    
-                    <div class="caption randomrotate"
-                         data-x="348"
-                         data-y="168"
-                         data-speed="300"
-                         data-start="1500"
-                         data-easing="easeOutExpo" data-end="3400" data-endspeed="300" data-endeasing="easeInSine"><img src="assets/section-slide/2/awesome-1.png" alt="">
-                    </div>
-    
-                    <div class="caption randomrotate"
-                         data-x="246"
-                         data-y="275"
-                         data-speed="300"
-                         data-start="1700"
-                         data-easing="easeOutExpo" data-end="3600" data-endspeed="300" data-endeasing="easeInSine"><img src="assets/section-slide/2/responsive-2.png" alt="">
-                    </div>
-                    
-                    <div class="caption randomrotate"
-                         data-x="566"
-                         data-y="275"
-                         data-speed="300"
-                         data-start="1900"
-                         data-easing="easeOutExpo" data-end="3800" data-endspeed="300" data-endeasing="easeInSine"><img src="assets/section-slide/2/slider-3.png" alt="">
-                    </div>
-                    
-                    
-                    <div class="caption randomrotate"
-                         data-x="406"
-                         data-y="168"
-                         data-speed="300"
-                         data-start="4000"
-                         data-easing="easeOutExpo" data-end="5900" data-endspeed="300" data-endeasing="easeInSine"><img src="assets/section-slide/2/with-4.png" alt="">
-                    </div>
-    
-                    <div class="caption randomrotate"
-                         data-x="252"
-                         data-y="275"
-                         data-speed="300"
-                         data-start="4200"
-                         data-easing="easeOutExpo" data-end="6100" data-endspeed="300" data-endeasing="easeInSine"><img src="assets/section-slide/2/many-5.png" alt="">
-                    </div>
-                    
-                    <div class="caption randomrotate"
-                         data-x="436"
-                         data-y="275"
-                         data-speed="300"
-                         data-start="4400"
-                         data-easing="easeOutExpo" data-end="6300" data-endspeed="300" data-endeasing="easeInSine"><img src="assets/section-slide/2/transitions-6.png" alt="">
-                    </div>
                 </li>
                 <!--END SECOND SLIDE-->
                 
@@ -180,55 +91,6 @@
                 <!--THE THIRD SLIDE -->
                 <li data-transition="random" data-slotamount="15" data-masterspeed="300" data-delay="6500">       
                     <img alt="" src="assets/section-slide/3/slide3.jpg" >
-    
-                    <div class="caption randomrotate"
-                         data-x="205"
-                         data-y="168"
-                         data-speed="300"
-                         data-start="1500"
-                         data-easing="easeOutExpo" data-end="4000" data-endspeed="300" data-endeasing="easeInSine"><img src="assets/section-slide/3/the-1.png" alt="">
-                    </div>
-    
-                    <div class="caption randomrotate"
-                         data-x="324"
-                         data-y="168"
-                         data-speed="300"
-                         data-start="1700"
-                         data-easing="easeOutExpo" data-end="4200" data-endspeed="300" data-endeasing="easeInSine"><img src="assets/section-slide/3/best-2.png" alt="">
-                    </div>
-                    
-                    <div class="caption randomrotate"
-                         data-x="464"
-                         data-y="168"
-                         data-speed="300"
-                         data-start="1900"
-                         data-easing="easeOutExpo" data-end="4400" data-endspeed="300" data-endeasing="easeInSine"><img src="assets/section-slide/3/promotion-3.png" alt="">
-                    </div>
-                    
-                    
-                    <div class="caption randomrotate"
-                         data-x="215"
-                         data-y="275"
-                         data-speed="300"
-                         data-start="2100"
-                         data-easing="easeOutExpo" data-end="4600" data-endspeed="300" data-endeasing="easeInSine"><img src="assets/section-slide/3/for-4.png" alt="">
-                    </div>
-    
-                    <div class="caption randomrotate"
-                         data-x="333"
-                         data-y="275"
-                         data-speed="300"
-                         data-start="2300"
-                         data-easing="easeOutExpo" data-end="4800" data-endspeed="300" data-endeasing="easeInSine"><img src="assets/section-slide/3/your-5.png" alt="">
-                    </div>
-                    
-                    <div class="caption randomrotate"
-                         data-x="497"
-                         data-y="275"
-                         data-speed="300"
-                         data-start="2500"
-                         data-easing="easeOutExpo" data-end="5000" data-endspeed="300" data-endeasing="easeInSine"><img src="assets/section-slide/3/business-6.png" alt="">
-                    </div>
                 </li>
                 <!--END THIRD SLIDE-->
 
@@ -310,14 +172,15 @@
             
             <!--left testimonial-->
             <div class="grid_6 lefttestimonials">
-
+                <h2>Drew Garcia</h2> <!--you can edit-->
+                <p>Not only do the cakes look amazing they taste great too! Here is some text to fill. Fill in this area. Yum yum yum. More information here. Longer testimonial here.</p> <!--you can edit-->
             </div>
             <!--end left testimonial-->
             
             <!--right testimonial-->
             <div class="grid_6 righttestimonials">
-                <h2>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse ut neque nulla. Nulla aliquam dictum arcu.</h2> <!--you can edit-->
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse ut neque nulla. Nulla aliquam dictum arcu, eget bibendum diam dapibus a. Maecenas lectus felis, pharetra sit amet dictum quis, semper eu nibh. Praesent placerat massa ut justo gravida placerat. Phasellus. Praesent placerat massa ut justo gravida placerat semper eu nibh.</p> <!--you can edit-->
+                <h2>Joe Smith</h2> <!--you can edit-->
+                <p>Not only do the cakes look amazing they taste great too! Here is some text to fill. Fill in this area. Yum yum yum. More information here. Longer testimonial here.</p> <!--you can edit--> <!--you can edit-->
             </div>
             <!--right testimonial-->	
             
@@ -340,8 +203,8 @@
     <!--start anchors-->
     <div class="anchors">
         <div class="contanchors">
-            <a href="#testimonials"><img class="anchortop" alt="" src="assests/anchors/topportfolio.png" /></a>
-            <a href="#sectionprices"><img class="anchorbottom" alt="" src="assests/anchors/bottomportfolio.png" /></a>
+            <a href="#testimonials"><img class="anchortop" alt="" src="assets/anchors/topportfolio.png" /></a>
+            <a href="#oursocial"><img class="anchorbottom" alt="" src="assets/anchors/bottomportfolio.png" /></a>
         </div>
     </div>
     <!--end anchors-->
@@ -359,7 +222,6 @@
         <div class="grid_12">
             <div id="options" class="clear">
                 <ul id="filters" class="option-set clearfix" data-option-key="filter">
-                    <li class="orange"><a href="#filter" data-option-value="*" class="selected">Show all</a></li>
                     <li class="yellow"><a href="#filter" data-option-value=".yellow">Cake Design</a></li>
                     <li class="blue"><a href="#filter" data-option-value=".blue">Cup Cakes</a></li>
                     <li class="navi"><a href="#filter" data-option-value=".green">Baby Shower</a></li>
@@ -371,13 +233,13 @@
             </div>
         </div>
         <!--end options-->
-              
 
+        <div id="pager" style="text-align:center;"></div>   
               
         <!--start images-->
         <div id="containerisotope" class="clear">    
 
-          <% @mobile_pictures[0..10].each do |pic| %>
+          <% @mobile_pictures.each do |pic| %>
               <div class="element yellow" data-category="yellow">
                   <a data-rel="prettyPhoto[]" href=<%= pic.url %>>
                       <img alt="" class="imgwork" src=<%= pic.url %> />
@@ -385,7 +247,7 @@
               </div>
           <% end %>
 
-          <% @cupcake_pictures[0..10].each do |pic| %>
+          <% @cupcake_pictures.each do |pic| %>
               <div class="element blue" data-category="blue">
                   <a data-rel="prettyPhoto[]" href=<%= pic.url %>>
                       <img alt="" class="imgwork" src=<%= pic.url %> />
@@ -393,7 +255,7 @@
               </div>
           <% end %>
             
-          <% @baby_shower_pictures[0..10].each do |pic| %>
+          <% @baby_shower_pictures.each do |pic| %>
               <div class="element green" data-category="green">
                   <a data-rel="prettyPhoto[]" href=<%= pic.url %>>
                       <img alt="" class="imgwork" src=<%= pic.url %> />
@@ -401,7 +263,7 @@
               </div>
           <% end %>
 
-          <% @birthday_cake_pictures[0..10].each do |pic| %>
+          <% @birthday_cake_pictures.each do |pic| %>
               <div class="element red" data-category="red">
                   <a data-rel="prettyPhoto[]" href=<%= pic.url %>>
                       <img alt="" class="imgwork" src=<%= pic.url %> />
@@ -409,7 +271,7 @@
               </div>
           <% end %>
 
-          <% @graduation_cake_pictures[0..10].each do |pic| %>
+          <% @graduation_cake_pictures.each do |pic| %>
               <div class="element purple" data-category="purple">
                   <a data-rel="prettyPhoto[]" href=<%= pic.url %>>
                       <img alt="" class="imgwork" src=<%= pic.url %> />
@@ -417,7 +279,7 @@
               </div>
           <% end %>
 
-          <% @grooms_cake_pictures[0..10].each do |pic| %>
+          <% @grooms_cake_pictures.each do |pic| %>
               <div class="element teal" data-category="teal">
                   <a data-rel="prettyPhoto[]" href=<%= pic.url %>>
                       <img alt="" class="imgwork" src=<%= pic.url %> />
@@ -425,7 +287,7 @@
               </div>
           <% end %>
 
-          <% @bridal_cake_pictures[0..10].each do |pic| %>
+          <% @bridal_cake_pictures.each do |pic| %>
               <div class="element grape" data-category="grape">
                   <a data-rel="prettyPhoto[]" href=<%= pic.url %>>
                       <img alt="" class="imgwork" src=<%= pic.url %> />
@@ -444,16 +306,6 @@
 
 
 <section id="oursocial">
-	
- 	<!--start anchors-->
-    <div class="anchors">
-    	<div class="contanchors">
-            <a href="#sectionskills"><img class="anchortop" alt="" src="assets/anchors/topsocial.png" /></a>
-            <a href="#contacts"><img class="anchorbottom" alt="" src="assets/anchors/bottomsocial.png" /></a>
-        </div>
-    </div>
-    <!--end anchors-->
-    
     <!--start container-->
     <div class="container clearfix">
     
@@ -508,6 +360,117 @@
 	
 	</script>
 	<!--google analytics-->
+
+  <script type="text/javascript">
+
+  $( document ).ready(function() {
+    var pagegenation = 8;
+    var products = jQuery(".element").length;
+    var selecter = jQuery(".element");
+    //alert(products);
+    var counter = 1;
+    var counter_1 = 1;
+      var valsele = "'*'";
+      
+      var last_val = products % pagegenation
+      var pager = 0;
+      if(last_val > 0){
+        pager = (products-(products % pagegenation))/pagegenation + 1;
+      } else {
+        pager = products/pagegenation;  
+      }
+      jQuery("#pager_val").remove();
+      if(pager > 1){
+        var page_text = '<div id="pager_val">';       
+        for (var i = 0; i < pager; i++) {
+          var j = i+1;
+            page_text+='<span style="background-color:#94cdc6; border-bottom:2px solid #528e84; margin: 5px;padding: 5px;"><a href="#" style="color:white;" onclick="return pagercall('+j+','+products+','+valsele+');">'+j+'</a></span>';
+        }
+        page_text+='</div>';      
+        jQuery("#pager").append(page_text);
+      }
+      
+      var pagistart = 1 ;
+      var pagiend = pagistart + pagegenation -1 ;
+      var reanslate_w = 0;
+      var reanslate_h = 0;
+      jQuery("#containerisotope").css({"height":"620px"});
+      jQuery(selecter).each(function() {  
+          jQuery(this ).removeClass( "isotope-hidden" );
+          //$(this ).removeClass( "nonpager" );
+          //$( this ).removeClass("nonpager");  
+        //alert(pagistart);alert(pagiend);
+        
+          if((counter >= pagistart ) && (counter <= pagiend)){
+            if((counter_1 % 5) == 0){
+              reanslate_w = 0;
+              reanslate_h = (counter_1 / 5)*300;
+            }
+            jQuery( this ).css({"transform": "translate("+reanslate_w+"px, "+reanslate_h+"px)","scale":"(1, 1)","opacity":"1"});
+            reanslate_w = reanslate_w +300; 
+            counter_1 = counter_1 + 1;
+            //alert(pagiend);   
+          } else {
+            jQuery( this ).addClass( "isotope-hidden" );
+            jQuery( this ).css({"transform": "translate(0px,0px)","scale":"(0.001,0.001)","opacity":"0"});
+          }
+          counter = counter + 1;
+          //alert(counter);
+        });
+        
+  });
+
+    function pagercall(value,products,selecter){
+    var pagegenation = 8;
+    //alert(value);
+    var pagistart = (value-1)*pagegenation+1 ;
+    //alert(pagistart);
+    var pagiend = pagistart + pagegenation-1 ;
+    //alert(pagiend);
+    var counter = 1;
+    var counter_1 = 1;
+    var reanslate_w = 0;
+    var reanslate_h = 0;
+    var selecter_id = '';
+    
+    if(selecter == '*'){
+      selecter_id = jQuery(".element");
+    } else {
+      selecter_id = jQuery("[data-category~='"+selecter.slice(1)+"']");
+    }
+    jQuery("#containerisotope").css({"height":"620px"});
+    jQuery(selecter_id).each(function() {
+    
+      
+    //alert(counter); 
+    //jQuery( this ).removeClass("pager");
+    jQuery( this ).removeClass("isotope-hidden");   
+        if((counter >= pagistart ) && (counter <= pagiend)){
+          if((counter_1 % 5) == 0){
+          reanslate_w = 0;
+          reanslate_h = (counter_1 / 5)*310;
+          }
+          //jQuery( this ).removeClass( "pager" );
+          //jQuery( this ).addClass( "nonpager" );
+          //jQuery( this ).show(1000);
+          jQuery( this ).css({"transform": "translate("+reanslate_w+"px, "+reanslate_h+"px)","scale":"(1, 1)","opacity":"1"});
+          reanslate_w = reanslate_w +300; 
+          counter_1 = counter_1 + 1;
+          //$( this ).css( "display", "none" );       
+        } else {
+          jQuery( this ).addClass( "isotope-hidden" );
+          jQuery( this ).css({"transform": "translate(0px,0px)","scale":"(0.001,0.001)","opacity":"0"});
+          //jQuery( this ).addClass( "pager" );
+          //jQuery( this ).hide(1000);
+        }
+        counter = counter + 1;
+      });
+      //alert(counter);
+    return false;
+  }
+
+
+  </script>
     
 
 </body>  
