--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -172,15 +172,21 @@
             
             <!--left testimonial-->
             <div class="grid_6 lefttestimonials">
-                <h2>Drew Garcia</h2> <!--you can edit-->
-                <p>Not only do the cakes look amazing they taste great too! Here is some text to fill. Fill in this area. Yum yum yum. More information here. Longer testimonial here.</p> <!--you can edit-->
+                <h2>Delilah Janac</h2> <!--you can edit-->
+                <p>Thank you for an amazing cake! Everyone loved it and couldn't believe the detail that it had. Thank you again for making his cake perfect!</p> 
+                <h2>Kimberly Buie Dehlinger</h2> <!--you can edit-->
+                <p>The cake was wonderful and loved by all! I had several people say that it was the best baby shower cake they have ever seen...it was delicious as well!</p>
+                
+                <!--you can edit-->
             </div>
             <!--end left testimonial-->
             
             <!--right testimonial-->
             <div class="grid_6 righttestimonials">
-                <h2>Joe Smith</h2> <!--you can edit-->
-                <p>Not only do the cakes look amazing they taste great too! Here is some text to fill. Fill in this area. Yum yum yum. More information here. Longer testimonial here.</p> <!--you can edit--> <!--you can edit-->
+                <h2>Melodie Martinez</h2> <!--you can edit-->
+                <p>I can not thank you enough for the cake and cupcakes! You did an amazing job!! They looked as well as tasted amazing! My son wanted to eat them as soon as i got home  Thank you so much!</p> <!--you can edit--> <!--you can edit-->
+                <h2>Emily Lawhon</h2> <!--you can edit-->
+                <p>My wedding cake and grooms cake were amazing. You did an amazing job on the grooms cake. Everyone thought it was the coolest cake ever! Thank you so much!!!</p>
             </div>
             <!--right testimonial-->	
             
