--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -53,7 +53,7 @@
         <div class="grid_5">
             <nav class="rightnavigation">
         		<ul>
-                	<li><a href="#sectionteam">Flavors</a></li> <!--you can edit-->
+                	<li><a href="#sectionskills">Flavors</a></li> <!--you can edit-->
                     <li><a href="#oursocial">Social</a></li> <!--you can edit-->
                     <li><a href="#contacts">Contact Us</a></li> <!--you can edit-->
                 </ul>    
@@ -305,6 +305,89 @@
         </div>
         <!--end images-->
 
+    </div>
+    <!--end container-->   
+    
+</section>
+
+<section id="sectionskills">
+  
+  <!--start anchors-->
+    <div class="anchors">
+      <div class="contanchors">
+            <a href="#sectionportfolio"><img class="anchortop" alt="" src="assets/anchors/toptestimonials.png" /></a>
+            <a href="#oursocial"><img class="anchorbottom" alt="" src="assets/anchors/bottomtestimonials.png" /></a>
+        </div>
+    </div>
+    <!--end anchors-->
+    
+    <!--start container-->
+    <div class="container clearfix">
+    
+      <!--start titlesection-->
+        <div class="grid_12 titlesection">
+          <h1>Flavors</h1>
+        </div>
+        <!--end title section-->
+        
+        <!--start left content-->
+        <div class="grid_5">
+          
+            <!--skill-->
+            <div class="skilldescription">
+              <div id="operator"></div>
+              <img alt="" src="assets/section-skills/icon1.png" /> <!--you can edit the image, open the psd file for the vector image format-->
+              <h2 style="color:white;">Creative Cake Design</h2> <!--you can edit-->
+              <p>We take the time to create the most creative and detailed cake we can.</p> <!--you can edit-->
+            </div>
+            <!--skill-->
+            
+            <!--skill-->
+            <div class="skilldescription">
+              <img alt="" src="assets/section-skills/icon2.png" /> <!--you can edit the image, open the psd file for the vector image format-->
+                <h2 style="color:white;">Flavor</h2> <!--you can edit-->
+              <p>Choose a flavor from the list to the right. Everyone of them is scrumptious. You can't go wrong.</p> <!--you can edit-->
+            </div>
+            <!--skill-->
+            
+            <!--skill-->
+            <div class="skilldescription">
+              <img alt="" src="assets/section-skills/icon3.png" /> <!--you can edit the image, open the psd file for the vector image format-->
+                <h2 style="color:white;">Best Cake Ever</h2> <!--you can edit-->
+              <p>With a little love put into every cake you will recieve not only a really cool looking cake, but a great tasting one too!</p> <!--you can edit-->
+            </div>
+            <!--skill-->
+            
+        </div>
+        <!--end left content-->
+        
+        <!--start clip-->
+        <div class="grid_2 clip">
+          <img class="opacity" alt="" src="assets/section-skills/clip.png" />
+        </div>
+        <!--end clip-->
+        
+        <div class="grid_5">
+          
+            <div id="allprogresbar">
+
+              <div class="progresbar" style="padding-left:75px; padding-top:30px;">
+                  <p>FLAVOR 1</p>
+                  <p>FLAVOR 2</p>
+                  <p>FLAVOR 3</p>
+                  <p>FLAVOR 4</p>
+                  <p>FLAVOR 5</p>
+                  <p>FLAVOR 6</p>
+                  <p>FLAVOR 7</p>
+                  <p>FLAVOR 8</p>
+                  <p>FLAVOR 9</p>
+                  <p>FLAVOR 10</p>
+              </div>
+            
+            </div>
+            
+        </div>
+    
     </div>
     <!--end container-->   
     
